Added test file for test command.

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "mocha"
+    "test": "mocha part-1/tests.js"
   },
   "repository": {
     "type": "git",
